--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,16 @@
 <div class="nav-wrapper">
   <a href="#" class="brand-logo">Task Management</a>
   <ul id="nav-mobile" class="right hide-on-med-and-down">
-    <li><a href="sass.html">Home</a></li>
-    <li><a href="badges.html">Tasks</a></li>
-    <li><a href="collapsible.html">Logout</a></li>
+
+      {% if user.is_authenticated %}
+          <li><a href="{% url 'home' %}">Home</a></li>
+          <li><a href="{% url 'accounts:dashboard' %}">Tasks</a></li>
+          <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
+      {% else %}
+          <li><a href="{% url 'accounts:login' %}">Login</a></li>
+          <li><a href="{% url 'accounts:register' %}">Register</a></li>
+      {% endif %}
+
   </ul>
 </div>
 </nav>
