--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,11 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Django To Do - Home Page</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/materialize.min.css' %}">
-</head>
-<body>
+{% extends 'base.html' %}
 
-<h1>Home page of the to do application.</h1>
+{% block title %}
+    Task Management - Home
+{% endblock %}
 
-</body>
-</html>
+{% block content %}
+<h2 class="teal-text">
+    Home page of the task management application
+</h2>
+{% endblock %}
