Dev for CRUD completed

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
     <h2>Base file contents</h2>
 {% endblock %}
 <footer>
-    <p class="teal-text">Copyright@ Task Management Application 2020</p>
+    <p class="teal-text center">Copyright@ Task Management Application 2020</p>
 </footer>
 </body>
 </html>
