--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -9,6 +9,13 @@
     Dashboard Page - {{ request.user }}
 </h2>
 
+<div class="collection">
+    <a href="{% url 'accounts:list_task' %}" class="collection-item">See All Tasks</a>
+    <a href="{% url 'accounts:list_category' %}" class="collection-item">See All Categories</a>
+    <a href="{% url 'accounts:create_task' %}" class="collection-item">Add a Task</a>
+    <a href="{% url 'accounts:create_category' %}" class="collection-item">Add a Category</a>
+</div>
+
 {% if messages %}
     {% for message in messages %}
         <div class="center red-text {% if message.tags %}alert-{{ message.tags }}{% endif %}" role="alert">{{ message }}</div>
