--- a/templates/tasks/delete_category.html
+++ b/templates/tasks/delete_category.html
@@ -8,4 +8,9 @@
 <h2 class="teal-text">
     Delete Category
 </h2>
+
+<form method="post">{% csrf_token %}
+    <p>Are you sure you want to delete "{{ category.name }}"?</p>
+    <input type="submit" value="Confirm">
+</form>
 {% endblock %}
