Javascript settings tweaks

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/materialize.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+    <script src="{% static 'js/jquery_min.js' %}"></script>
     <script src="{% static 'js/materialize.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 </head>
 <body>
 <nav>
