--- a/templates/tasks/create_task.html
+++ b/templates/tasks/create_task.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load widget_tweaks %}
 
 {% block title %}
     Create Task
@@ -8,18 +9,23 @@
 <h2 class="teal-text">
     Create Task
 </h2>
-<form action="#" method="post" class="row" enctype="multipart/form-data">
+<form action="" method="post" class="row" enctype="multipart/form-data">
+    <div class="form-container">
     {% csrf_token %}
     {% for field in form.visible_fields %}
-        <div class="input-field col s6">
-            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+      <div class="input-field col s6">
+        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
 
-            {{ field }}
-            {% for error in field.errors %}
-                <span class="help-block">{{ error }}</span>
-            {% endfor %}
-        </div>
+        {{ field }}
+        {% for error in field.errors %}
+          <span class="help-block">{{ error }}</span>
+        {% endfor %}
+      </div>
     {% endfor %}
-<input type="submit" value="Submit" class="button btn green">
+
+    <input type="submit" value="Submit" class="button btn green">
+    </div>
 </form>
+
+
 {% endblock %}
