--- a/templates/tasks/delete_category.html
+++ b/templates/tasks/delete_category.html
@@ -11,6 +11,6 @@
 
 <form method="post">{% csrf_token %}
     <p>Are you sure you want to delete "{{ category.name }}"?</p>
-    <input type="submit" value="Confirm">
+    <input type="submit" value="Confirm" class="button btn red">
 </form>
 {% endblock %}
