--- a/templates/tasks/detail_category.html
+++ b/templates/tasks/detail_category.html
@@ -5,9 +5,9 @@
 {% endblock %}
 
 {% block content %}
-<h2 class="teal-text">
-    Detail Category - {{ category.name }}
-</h2>
+<h3 class="orange-text center">
+    Details for Category - {{ category.name }}
+</h3>
 
     <div class="container">
         <p>
