--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -5,21 +5,21 @@
 {% endblock %}
 
 {% block content %}
-<h2 class="teal-text">
-    Login Page
-</h2>
+<h3 class="orange-text center">
+    Login
+</h3>
 {% if messages %}
     {% for message in messages %}
         <div class="center red-text {% if message.tags %}alert-{{ message.tags }}{% endif %}" role="alert">{{ message }}</div>
     {% endfor %}
 {% endif %}
 
-<form action="#" method="post" class="col s12">
+<form action="#" method="post" class="form-container">
   {% csrf_token %}
   <div class="row">
     <div class="input-field col s6">
       <input placeholder="Email" id="email" name="email" type="text" class="validate">
-      <label for="first_name">Enter Your Email {{ request.user }}</label>
+      <label for="first_name">Enter Your Email</label>
     </div>
     <div class="input-field col s6">
       <input id="password" type="password" name="password" class="validate">
