--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 
       {% if user.is_authenticated %}
           <li><a href="{% url 'home' %}">Home</a></li>
-          <li><a href="{% url 'accounts:dashboard' %}">Tasks</a></li>
+          <li><a href="{% url 'accounts:dashboard' %}">Dashboard</a></li>
           <li><a href="{% url 'accounts:logout' %}">Logout</a></li>
       {% else %}
           <li><a href="{% url 'accounts:login' %}">Login</a></li>
