--- a/templates/tasks/create_task.html
+++ b/templates/tasks/create_task.html
@@ -6,9 +6,9 @@
 {% endblock %}
 
 {% block content %}
-<h2 class="teal-text">
+<h3 class="orange-text center">
     Create Task
-</h2>
+</h3>
 <form action="" method="post" class="row" enctype="multipart/form-data">
     <div class="form-container">
     {% csrf_token %}
