--- a/templates/tasks/delete_category.html
+++ b/templates/tasks/delete_category.html
@@ -5,11 +5,11 @@
 {% endblock %}
 
 {% block content %}
-<h2 class="teal-text">
+<h3 class="orange-text center">
     Delete Category
-</h2>
+</h3>
 
-<form method="post">{% csrf_token %}
+<form method="post" class="form-container">{% csrf_token %}
     <p>Are you sure you want to delete "{{ category.name }}"?</p>
     <input type="submit" value="Confirm" class="button btn red">
 </form>
