--- a/templates/tasks/list_category.html
+++ b/templates/tasks/list_category.html
@@ -14,19 +14,29 @@
     {% endfor %}
 {% endif %}
 
+    {% if not all_categories %}
+    <h3 class="orange-text center">Hey {{ request.user.user_name }}, It seems you haven' added any category!</h3>
+    {% endif %}
+
     {% for each_category in all_categories %}
-        <div class="card">
+        <div class="card-container">
         <h2>{{ each_category.name }}</h2>
-            <p>
-                {{ each_category.description }}
-            </p>
-            <div class="container">
+            <div class="row">
+              <div class="col s8">
+                  <p class="teal-text">
+                      {{ each_category.description }}
+                  </p>
+              </div>
+              <div class="col s4">
+                  <img src="{{ each_category.category_image.url }}" alt="Image not available" height="300" width="300">
+              </div>
+            </div>
+            <div class="button-container">
                 <a href="{% url 'accounts:update_category' pk=each_category.pk %}" class="btn button yellow">Update Category</a>
                 <a href="{% url 'accounts:detail_category' pk=each_category.pk %}" class="btn button blue">View Details</a>
                 <a href="{% url 'accounts:delete_category' pk=each_category.pk %}" class="btn button red">Delete</a>
                 <a class="btn button green">View Tasks</a>
             </div>
-            <img src="{{ each_category.category_image.url }}" alt="Image not available" height="400" width="400">
         </div>
     {% endfor %}
 {% endblock %}
