--- a/templates/tasks/update_task.html
+++ b/templates/tasks/update_task.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<h2 class="teal-text">
-    Task Update Page
-</h2>
+<h3 class="orange-text center">
+    Update Task
+</h3>
 {% endblock %}
