--- a/templates/tasks/list_category.html
+++ b/templates/tasks/list_category.html
@@ -23,7 +23,7 @@
         <h2>{{ each_category.name }}</h2>
             <div class="row">
               <div class="col s8">
-                  <p class="teal-text">
+                  <p class="teal-text para-text">
                       {{ each_category.description }}
                   </p>
               </div>
