--- a/templates/tasks/update_category.html
+++ b/templates/tasks/update_category.html
@@ -10,7 +10,7 @@
     Update Category
 </h3>
 
-<form action="#" method="post" class="form-container" enctype="multipart/form-data">
+<form action="" method="post" class="form-container" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.name.label }}
     {{ form.name }}
