--- a/templates/tasks/create_category.html
+++ b/templates/tasks/create_category.html
@@ -10,6 +10,12 @@
     Create Category
 </h3>
 
+{% if messages %}
+    {% for message in messages %}
+        <div class="center green-text {% if message.tags %}alert-{{ message.tags }}{% endif %}" role="alert">{{ message }}</div>
+    {% endfor %}
+{% endif %}
+
 <form action="#" method="post" class="form-container" enctype="multipart/form-data">
 {% csrf_token %}
     {{ form.name.label }}
