--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -10,7 +10,7 @@
 </h3>
 {% if messages %}
     {% for message in messages %}
-        <div class="center red-text {% if message.tags %}alert-{{ message.tags }}{% endif %}" role="alert">{{ message }}</div>
+        <div class="center alert-info {% if message.tags %}alert-{{ message.tags }}{% endif %}" role="alert">{{ message }}</div>
     {% endfor %}
 {% endif %}
 
