--- a/templates/tasks/list_category.html
+++ b/templates/tasks/list_category.html
@@ -10,7 +10,7 @@
 </h2>
 {% if messages %}
     {% for message in messages %}
-        <div class="center green-text {% if message.tags %}alert-{{ message.tags }}{% endif %}" role="alert">{{ message }}</div>
+        <div class="center alert-info {% if message.tags %}alert-{{ message.tags }}{% endif %}" role="alert">{{ message }}</div>
     {% endfor %}
 {% endif %}
 
