--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -24,6 +24,7 @@
     </div>
 
     <a href="{% url 'accounts:all_users' %}" class="teal-text highlight-link">See all users</a>
+    <a href="{% url 'accounts:friend_list' %}" class="teal-text highlight-link">See all friends</a>
 </div>
 
 {% endblock %}
