API serializers added for accounts and tasks

--- a/templates/tasks/detail_task.html
+++ b/templates/tasks/detail_task.html
@@ -12,7 +12,7 @@
 <div class="task-container">
     <h4 class="grey-text center">{{ task.name }}</h4>
     <p>
-        {{ task.description }}
+        {{ task.description }} {{ Rio }}
     </p>
 
     <p>To be completed by {{ task.deadline_date }}</p>
